@@ -1,5 +1,14 @@
 #!/usr/bin/python
 # -*- coding: utf-8 -*-
+#
+# Network configuration tool
+# Copyright (C) 2006-2009, TUBITAK/UEKAE
+#
+# This program is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License as published by the
+# Free Software Foundation; either version 2 of the License, or (at your
+# option) any later version. Please read the COPYING file.
+#
 
 import comar
 import dbus
@@ -15,7 +24,7 @@ def printUsage():
     print "    devices         Show devices"
     print "    create          Create profile"
     print "    delete          Delete profile"
-    print "    up <profile     Bring profile up"
+    print "    up <profile>    Bring profile up"
     print "    down <profile>  Bring profile down"
 
 def getInput(label):
