@@ -1,6 +1,9 @@
 2009-05-25  Ozan Çağlayan <ozan@pardus.org.tr>
 	* bin/mudur.py (Logger.log): Strip color characters before writing to the
-	mudur.log file.
+	mudur.log file,
+	* bin/compat.py: Port the code to COMAR 3.0 structure,
+	* setup.py: Bump version to 3.0.3,
+	* bin/*.py: Update copyright dates,
 
 2009-05-21  Bahadır Kandemir <bahadir@pardus.org.tr>
 	* bin/mudur.py (getServices): Omit non existing services
